[package]
name = "enum-map-lite"
version = "0.2.0"
edition = "2021"
rust-version = "1.63"
authors = ["gorilskij <43991400@users.noreply.github.com>"]
description = "A stripped-down enum-keyed map backed by a fixed array. Like enum-map but without from_usize (no key/pair iteration), so #[derive(Enum)] works on any enum, keying purely on the discriminant."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["enum", "map", "array", "enum-map", "no-std"]
categories = ["data-structures", "no-std::no-alloc"]
repository = "https://github.com/gorilskij/enum-map-lite"

[dependencies]
enum-map-lite-derive = { path = "../enum-map-lite-derive", version = "0.2.0" }
